Features:
 * Item selection will open the item in the environment tree.

-------------------------
 v1.2.0 (2020-05-10)
-------------------------

!! Please ensure you're using the latest version of SDMMLauncher !!

Features:
 * Added an option to pin variables in "Edit Variables" window.
 * Added "Screenshot" tool to create high-resolution map images.
   Screenshot could be made for the map or just a selected area.
   It's available from the menu bar: "Options->Screenshot...".

Fixes:
 * Crush when editing variables.

Tweaks:
 * The editor now has its own logo! It was designed by Clément "Topy", thank him for that.
 * Allowed for turfs to change their dir from the tile popup menu.
 * "Preferences" button moved under the "File" menu item.
 * When trying to change the environment, if there are changes on the map, you will be asked to save them.

-------------------------
 v1.1.0 (2020-04-18)
-------------------------

Features:
 * Added a built-in changelog. Auto-shown when updated. Could be opened with: "Help->Changelog...".
 * When creating a new map, "dmm" extension will be added automatically.
 * "Show Icons" checkbox for "Environment Tree" replaced with "Collapse All" button.
 * Added a tile popup widget for quick dir modification.

Fixes:
 * The old bug which was the reason for map corruptions.

Tweaks:
 * Removed "movable" options for turfs and areas.
 * Editor title will show the name of the currently opened environment.